project setup OpenJdk 11 and OpenFx 11